2007-07-17  Stefan Kost  <ensonic@users.sf.net>

	* Makefile.am:
	* autogen.sh:
	* configure.in:
	* tests/Makefile.am:
	* tests/bugs.sh:
	* tests/bugs/Makefile.am:
	* tests/bugs/docs/Makefile.am:
	* tests/bugs/docs/Makefile.in:
	* tests/bugs/docs/tester-docs.sgml:
	* tests/bugs/docs/tester-sections.txt:
	* tests/bugs/docs/tester.types:
	* tests/bugs/src/Makefile.am:
	* tests/bugs/src/tester.c: (bug_445693), (bug_141869_a),
	(bug_141869_b):
	* tests/bugs/src/tester.h:
	* tests/gobject.sh:
	* tests/gobject/Makefile.am:
	* tests/gobject/docs/Makefile.am:
	* tests/gobject/docs/Makefile.in:
	* tests/gobject/docs/tester-docs.sgml:
	* tests/gobject/docs/tester-sections.txt:
	* tests/gobject/docs/tester.types:
	* tests/gobject/src/Makefile.am:
	* tests/gobject/src/tester.c: (gtkdoc_tester_new),
	(gtkdoc_tester_get_property), (gtkdoc_tester_set_property),
	(gtkdoc_tester_class_init), (gtkdoc_tester_get_type):
	* tests/gobject/src/tester.h:
	* tests/gtk-doc.make:
	* tests/gtkdoctest.sh:
	Add test-suite. Fixes #457173

2007-07-16  Stefan Kost  <ensonic@users.sf.net>

	Patch by: Yeti <yeti@physics.muni.cz>

	* gtkdoc-mkdb.in:
	Avoid useless $return_start access.

2007-07-16  Stefan Kost  <ensonic@users.sf.net>

	Patch by: Petteri Räty <betelgeuse@gentoo.org>

	* gtk-doc.m4:
	Make gtk-doc.m4 fail when needed gtk-doc is not installed and notify
	user. Fixes #323938 and #450338.

2007-07-15  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	* gtkdoc-mktmpl.in:
	Handle signed/unsigned without int. Fixes #141869.

2007-07-15  Stefan Kost  <ensonic@users.sf.net>

	Patch by: Yeti <yeti@physics.muni.cz>

	* gtkdoc-mkdb.in:
	Improve handling of legacy "return" statement doc parsing. Warn about
	those.

2007-07-15  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	Fix perl warning about usage of undefined symbol.

2007-07-15  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	* gtkdoc-mktmpl.in:
	Sync the function decl arg parsing. Fixes #419308.
