@@ -204,7 +204,7 @@ sub ParseStructDeclaration {
 	        # identifier, and be followed by any number of pairs of
 	        # brackets or a bit field specifier.
 	        # e.g. *foo, ***bar, *baz[12][23], foo : 25.
-	        if ($n =~ m/^\s* (\**(?:\s*restrict)?) \s* (\w+) \s* (?: ((?:\[[^\]]*\]\s*)+) | (:\s*\d+)?) \s* $/x) {
+	        if ($n =~ m/^\s* (\**(?:\s*restrict\b)?) \s* (\w+) \s* (?: ((?:\[[^\]]*\]\s*)+) | (:\s*\d+)?) \s* $/x) {
 		    my $ptrs = $1;
 		    my $name = $2;
 		    my $array = defined($3) ? $3 : "";
