@@ -1300,8 +1300,8 @@ sub OutputFunction {
 
 	# allow alphanumerics, '_', '[' & ']' in param names
 	# Try to match a standard parameter (keep in sync with gtkdoc-mktmpl)
-	#                                $1                                                                              $2                         $3                                                       $4       $5
-	} elsif ($declaration =~ s/^\s*((?:G_CONST_RETURN|G_GNUC_UNUSED|unsigned|signed|long|short|volatile|const)\s+)*((?:struct|enum)?\s*\w+)\s*((?:(?:const|restrict)?\s*\*?\s*(?:const|restrict)?\s*)*)(\w+)?\s*((?:\[\S*\])*)\s*[,\n]//) {
+	#                                $1                                                                              $2                             $3                                                           $4       $5
+	} elsif ($declaration =~ s/^\s*((?:G_CONST_RETURN|G_GNUC_UNUSED|unsigned|signed|long|short|volatile|const)\s+)*((?:struct\b|enum\b)?\s*\w+)\s*((?:(?:const|restrict)?\s*\*?\s*(?:const\b|restrict\b)?\s*)*)(\w+)?\s*((?:\[\S*\])*)\s*[,\n]//) {
 	    my $pre	= defined($1) ? $1 : "";
 	    my $type	= $2;
 	    my $ptr	= defined($3) ? $3 : "";
@@ -1314,9 +1314,9 @@ sub OutputFunction {
 	    $ptr  =~ s/\s+$//;
 	    if ($ptr && $ptr !~ m/\*$/) { $ptr .= " "; }
 
-            if (($name eq "") && $pre =~ m/^(un)?(signed)\s?/ ) {
+            if (($name eq "") && $pre =~ m/^((un)?signed)\s?/ ) {
                 $name = $type;
-                $type = "$1$2";
+                $type = "$1";
                 $pre = "";
             }
 
@@ -1338,9 +1338,9 @@ sub OutputFunction {
 	    }
 
 	# Try to match parameters which are functions (keep in sync with gtkdoc-mktmpl)
-	#                            $1                                       $2          $3      $4                      $5                    $7             $8
-	} elsif ($declaration =~ s/^(const\s+|G_CONST_RETURN\s+|unsigned\s+)*(struct\s+)?(\w+)\s*(\**)\s*(?:restrict)?\s*(const\s+)?\(\s*\*+\s*(\w+)\s*\)\s*\(([^)]*)\)\s*[,\n]//) {
-	    my $mod1 = defined($1) ? $1 : "";
+	#                              $1                                       $2          $3      $4                        $5                    $7             $8
+	} elsif ($declaration =~ s/^(const\s+|G_CONST_RETURN\s+|unsigned\s+)*(struct\s+)?(\w+)\s*(\**)\s*(?:restrict\b)?\s*(const\s+)?\(\s*\*+\s*(\w+)\s*\)\s*\(([^)]*)\)\s*[,\n]//) {
+ 	    my $mod1 = defined($1) ? $1 : "";
 	    if (defined($2)) { $mod1 .= $2; }
 	    my $type = $3;
 	    my $ptr1 = $4;
@@ -2468,7 +2468,7 @@ sub GetSignals {
 	    $desc .= MakeIndexterms($symbol);
 	    $desc .= "<programlisting>";
 
-	    $SignalReturns[$i] =~ m/\s*(const\s*)?(\w+)\s*(\**)/;
+	    $SignalReturns[$i] =~ m/\s*(const\s+)?(\w+)\s*(\**)/;
 	    my $type_modifier = defined($1) ? $1 : "";
 	    my $type = $2;
 	    my $pointer = $3;
