@@ -394,8 +394,8 @@ EOF
 					 $template_exists, 1, "");
 
 	    # Try to match a standard parameter (keep in sync with gtkdoc-mkdb)
-	    #                                $1                                                                              $2                         $3                                                       $4       $5
-	    } elsif ($declaration =~ s/^\s*((?:G_CONST_RETURN|G_GNUC_UNUSED|unsigned|signed|long|short|volatile|const)\s+)*((?:struct|enum)?\s*\w+)\s*((?:(?:const|restrict)?\s*\*?\s*(?:const|restrict)?\s*)*)(\w+)?\s*((?:\[\S*\])*)\s*[,\n]//) {
+	    #                                $1                                                                              $2                             $3                                                           $4       $5
+	    } elsif ($declaration =~ s/^\s*((?:G_CONST_RETURN|G_GNUC_UNUSED|unsigned|signed|long|short|volatile|const)\s+)*((?:struct\b|enum\b)?\s*\w+)\s*((?:(?:const|restrict)?\s*\*?\s*(?:const\b|restrict\b)?\s*)*)(\w+)?\s*((?:\[\S*\])*)\s*[,\n]//) {
  		my $pre		= defined($1) ? $1 : "";
  		my $type	= $2;
  		my $ptr		= defined($3) ? $3 : "";
@@ -407,9 +407,9 @@ EOF
  		$ptr  =~ s/\s+$//;
  		if ($ptr && $ptr !~ m/\*$/) { $ptr .= " "; }
 
- 		if (($name eq "") && $pre =~ m/^(un)?(signed)\s?/ ) {
+ 		if (($name eq "") && $pre =~ m/^((un)?signed)\s?/ ) {
  		    $name = $type;
- 		    $type = "$1$2";
+ 		    $type = "$1";
  		    $pre = "";
  		}
 
@@ -422,8 +422,8 @@ EOF
 					 "");
 
 	    # Try to match parameters which are functions (keep in sync with gtkdoc-mkdb)
-	    #                            $1                                       $2          $3      $4                      $5                    $7             $8
-	    } elsif ($declaration =~ s/^(const\s+|G_CONST_RETURN\s+|unsigned\s+)*(struct\s+)?(\w+)\s*(\**)\s*(?:restrict)?\s*(const\s+)?\(\s*\*+\s*(\w+)\s*\)\s*\(([^)]*)\)\s*[,\n]//) {
+	    #                              $1                                       $2          $3      $4                      $5                    $7             $8
+	    } elsif ($declaration =~ s/^(const\s+|G_CONST_RETURN\s+|unsigned\s+)*(struct\s+)?(\w+)\s*(\**)\s*(?:restrict\b)?\s*(const\s+)?\(\s*\*+\s*(\w+)\s*\)\s*\(([^)]*)\)\s*[,\n]//) {
 	        $name = $6;
 		$output .= &OutputParam ($symbol, $name, $template_exists, 1,
 					 "");
